...
    MapScreen(coffees, listJourneysViewModel)

    if (showBottomSheet) {
      ModalBottomSheet(
          onDismissRequest = { showBottomSheet = false },
          sheetState = sheetState,
          modifier = Modifier.testTag("exploreBottomSheet")) {
            if (!showCoffeeInfos) {
              Column(modifier = Modifier.fillMaxWidth()) {
                ListToggleRow(selectedOption = selectedOption) { option -> selectedOption = option }

                val listToShow =
                    when (selectedOption) {
                      "Curated" -> curatedCoffees
                      "Opened" -> filterOpenCoffeeShops(coffees)
                      else -> coffees
                    }

                CoffeeList(listToShow) {
                  coffeesViewModel.selectCoffee(it)
                  showCoffeeInfos = true
...
              "Opened" -> "Opened Coffee Shops"
              else -> "Nearby Coffee Shops"
            }
        Text(
            text = displayText,
            style = MaterialTheme.typography.titleMedium,
            modifier = Modifier.align(Alignment.CenterVertically).testTag("listTitle"))

        Box {
          TextButton(
              onClick = { expanded = true },
              colors = ButtonDefaults.buttonColors(containerColor = CoffeeBrown),
              shape = RoundedCornerShape(15.dp),
              modifier = Modifier.testTag("toggleDropdownMenu")) {
                Icon(
                    imageVector = Icons.Filled.Menu,
                    contentDescription = "Choose View",
                    tint = Color.White)
                Spacer(modifier = Modifier.width(4.dp))
                Text(
...
                    color = Color.White)
              }

          DropdownMenu(
              expanded = expanded,
              onDismissRequest = { expanded = false },
              modifier = Modifier.testTag("dropdownMenu")) {
                listOf("Nearby", "Curated", "Opened").forEach { option ->
                  DropdownMenuItem(
                      text = {
                        Row( // Wrap the content to include the checkmark
                            verticalAlignment = Alignment.CenterVertically,
                            horizontalArrangement = Arrangement.SpaceBetween) {
...
    // Display a message when there are no coffee shops in the list
    Box(modifier = Modifier.fillMaxSize().padding(16.dp), contentAlignment = Alignment.Center) {
      Text(
          text = "No coffee shops found!",
          style = MaterialTheme.typography.titleMedium,
          color = Color.Gray,
          modifier = Modifier.testTag("noOpenCoffeeShopsMessage"))
    }
  } else {
    // Display the list of coffee shops
    LazyColumn(modifier = Modifier.fillMaxHeight(0.9f).testTag("bottomSheet")) {
      items(coffeeShops) { coffee ->
        CoffeeInformationCardScreen(coffeeShop = coffee, onClick = { onCoffeeClick(coffee) })
      }
    }
  }
}
...
 */
@Composable
fun ShowMenuButton(onClick: () -> Unit) {
  Box(Modifier.fillMaxSize()) {
    IconButton(
        onClick = onClick,
        modifier = Modifier.align(Alignment.BottomStart).padding(20.dp).testTag("menuButton")) {
          Box(
              modifier =
                  Modifier.size(56.dp)
                      .clip(CircleShape)
                      .border(1.dp, Color.Black, CircleShape)
                      .padding(8.dp)) {
...
