...
        viewModel(factory = ListJourneysViewModel.Factory),
    coffeesViewModel: CoffeesViewModel = viewModel(factory = CoffeesViewModel.Factory),
    recommendationViewModel: RecommendationViewModel =
        viewModel(factory = RecommendationViewModel.Factory),
    navigationActions: NavigationActions
) {
  // State to track whether we're in "Gallery" or "Explore" mode
  var currentSection by remember { mutableStateOf("Gallery") }
  var curatedCoffeeShops by rememberSaveable { mutableStateOf<List<CoffeeShop>>(emptyList()) }

  val coroutineScope = rememberCoroutineScope()
  val context = LocalContext.current
  var permissionGranted by remember { mutableStateOf(false) }
...
      }
      isFetched = true
    }
  }

  Scaffold(
      modifier = Modifier.testTag("overviewScreen"),
      topBar = {
        Column {
          TopAppBar(
              title = {
                Image(
                    painter = painterResource(id = R.drawable.app_title),
                    contentDescription = "App Title Logo",
                    modifier = Modifier.testTag("appTitle").fillMaxHeight().testTag("appTitle"))
              },
              actions = {
                Row {
                  IconButton(
                      onClick = { navigationActions.navigateTo(Screen.ADD_JOURNEY) },
                      modifier = Modifier.testTag("addButton")) {
                        Icon(imageVector = Icons.Outlined.Add, contentDescription = "Add")
                      }
                  Spacer(modifier = Modifier.width(16.dp))
                  IconButton(
                      onClick = { navigationActions.navigateTo(Screen.USERPROFILE) },
                      modifier = Modifier.testTag("accountButton")) {
                        Icon(
                            imageVector = Icons.Default.AccountCircle,
                            contentDescription = "Account")
                      }
                }
              })
...
