...
fun JourneyDescriptionField(description: String, onDescriptionChange: (String) -> Unit) {
  OutlinedTextField(
      value = description,
      onValueChange = onDescriptionChange,
      label = { Text("Description") },
      placeholder = { Text("Capture your coffee experience") },
      modifier = Modifier.fillMaxWidth().height(150.dp).testTag("inputJourneyDescription"))
}

/**
 * Displays a row with a checkbox for selecting "At home" or "At a coffee shop".
 *
 * @param isYesSelected Whether the coffee shop option is selected.
...
  if (coffeeShopExpanded) {
    LocationDropdown(onSelectedCoffeeShopChange, scope, context)
  } else if (!isYesSelected) {
    onSelectedCoffeeShopChange(
        CoffeeShop(
            id = "Unknown",
            coffeeShopName = "Unknown Location",
            location = Location(latitude = 0.0, longitude = 0.0, name = "Unknown Location"),
            rating = 0.0,
            hours = emptyList(),
            reviews = emptyList(),
            imagesUrls = emptyList()))
  }
...
            keyboardActions =
                KeyboardActions(
                    onDone = {
                      selectCoffeeShop()
                      showDropdown = false
                    }),
            modifier = Modifier.menuAnchor().fillMaxWidth().testTag("inputCoffeeshopLocation"))

        // Dropdown menu for coffee shop suggestions
        ExposedDropdownMenu(
            expanded = showDropdown && coffeeShops.isNotEmpty(),
            onDismissRequest = { showDropdown = false },
            modifier = Modifier.testTag("locationSuggestionsDropdown")) {
              coffeeShops.take(3).forEach { coffeeShop ->
                DropdownMenuItem(
                    text = {
                      Text(
                          text =
                              coffeeShop.coffeeShopName.take(30) +
...
            readOnly = true, // Prevent typing in the TextField
            trailingIcon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded = expanded) },
            modifier =
                Modifier.menuAnchor()
                    .fillMaxWidth() // Set the width of the text field to fill the
                    // parent width
                    .testTag("inputCoffeeOrigin") // Add a test tag for testing
                    .focusRequester(focusRequester) // Attach the FocusRequester
                    .clickable {
                      expanded = true // Trigger dropdown when clicked
                    },
            keyboardOptions = KeyboardOptions.Default.copy(imeAction = ImeAction.Done),
            keyboardActions = KeyboardActions(onDone = { focusRequester.requestFocus() }))
...
        DropdownMenu(
            expanded = coffeeOriginExpand,
            onDismissRequest = { coffeeOriginExpand = false },
            modifier =
                Modifier.height(200.dp) // Limit height of the dropdown (set a fixed value)
                    .focusRequester(focusRequester) // Attach the FocusRequester
                    .testTag("dropdownMenuCoffeeOrigin") // Add a test tag for testing
            ) {
              CoffeeOrigin.entries.drop(1).forEach { origin ->
                DropdownMenuItem(
                    text = { Text(origin.name) },
                    onClick = {
                      onCoffeeOriginChange(origin) // Set the selected coffee origin
...
