...
  val userEmail by userViewModel.userEmail.collectAsState()
  val userProfilePicture by userViewModel.userProfilePicture.collectAsState()

  var showDialog by remember { mutableStateOf(false) }

  Scaffold(
      modifier = Modifier.fillMaxSize().testTag("UserProfileScreen"),
      topBar = {
        TopAppBar(
            title = {},
            modifier = Modifier.testTag("topBar"),
            navigationIcon = {
              IconButton(
...
              Row(
                  modifier = Modifier.fillMaxWidth(),
                  horizontalArrangement = Arrangement.SpaceBetween,
                  verticalAlignment = Alignment.Top) {
                    Column {
                      Text(
                          text = username ?: "Username",
                          style = MaterialTheme.typography.headlineMedium,
                          modifier = Modifier.testTag("Username"))
                      Spacer(Modifier.height(8.dp))
                      Text(
                          text = userEmail ?: "Username@gmail.com",
                          modifier = Modifier.testTag("User Email"))
                    }

                    if (userProfilePicture != null) {
                      Image(
                          painter =
                              rememberAsyncImagePainter(
...
                  }
              Spacer(Modifier.height(60.dp))
              ProfileMenuItem(
                  icon = Icons.Default.Favorite,
                  label = "My Favorites",
                  onClick = { navigationActions.navigateTo(Screen.USER_PRIVATE_LIST) },
                  testTag = "Favorite button")
              ProfileMenuItem(
                  icon = Icons.Default.MoreVert,
                  label = "About us",
                  onClick = { navigationActions.navigateTo(Screen.INFO_ABOUT_US) },
                  testTag = "About us")

...
